--- a/students/hayrutdinov_e/task2/task2.vcxproj.filters
+++ b/students/hayrutdinov_e/task2/task2.vcxproj.filters
@@ -10,4 +10,9 @@
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
